--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
             <div class="editor-container" id="content-fling">
                 <div class="editor-header">
-                    <h1 class="script-title text-[var(--accent-green)]">SHEILT FLING V1</h1>
+                    <h1 class="script-title text-[var(--accent-green)]">SHEILT FLING V1 GUI</h1>
                     <div class="script-meta">
                         <span>> STATUS: UNDETECTED</span>
                         <span>> AUTHOR: sheiltisdead</span>
@@ -321,7 +321,7 @@
 
             <div class="editor-container hidden" id="content-prison" style="display: none;">
                 <div class="editor-header">
-                    <h1 class="script-title text-[var(--accent-orange)]">PRISON LIFE GUI</h1>
+                    <h1 class="script-title text-[var(--accent-orange)]">SHEILT PRISON LIFE GUI</h1>
                     <div class="script-meta">
                         <span>> STATUS: UNDETECTED</span>
                         <span>> AUTHOR: sheiltisdead</span>
