--- a/getlink/YHgb6bH8u9i7F654r5Hu899h754DERscRXC/index.html
+++ b/getlink/YHgb6bH8u9i7F654r5Hu899h754DERscRXC/index.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="space-y-2 text-[10px] font-mono text-slate-500">
                         <div class="flex justify-between border-b border-slate-800 pb-2"><span>MODE</span><span class="text-cyan-600">DISTRIBUTED_STASH</span></div>
-                        <div class="flex justify-between border-b border-slate-800 pb-2"><span>WAIT</span><span class="text-cyan-600">03:33</span></div>
+                        <div class="flex justify-between border-b border-slate-800 pb-2"><span>WAIT</span><span class="text-cyan-600">??:??</span></div>
                     </div>
                 </div>
                 <button onclick="startProcess()" class="w-full h-14 bg-slate-900 border border-cyan-900/30 hover:border-cyan-500 text-slate-200 font-bold tracking-widest text-sm font-mono transition-all">INITIALIZE</button>
